<resources>
    <!--splash-->
    <string name="app_name">Jarvis</string>
    <string name="splash_version">版本名称</string>
    <string name="home_welcome">欢迎回来，我是Jarvis，让我看看有什么可以为您效劳的！把你的手机交给我，我会将它管理的井井有条！！！</string>

    <!--home-->
    <string name="home_title">控制台</string>
    <string name="about_icon_title">J.A.R.V.I.S</string>
    <string name="home_odd_egg">ODD EGG</string>
    <!--home:dialog-->
    <string name="dialog_initialize_pwd">请填写密码</string>
    <string name="dialog_confirm_pwd">输入密码</string>
    <string name="dialog_first_pwd_hint">请输入密码</string>
    <string name="dialog_second_pwd_hint">请确认密码</string>
    <string name="dialog_positive_button">确认</string>
    <string name="dialog_check_button">检查</string>
    <string name="dialog_negative_button">取消</string>

    <!--手机防盗-->
    <string name="burglars_title">防盗</string>
    <string name="burglars_setup1_title">1.设置手机防盗</string>
    <string name="burglars_setup1_subtitle">设置手机防盗参数：</string>
    <string name="burglars_setup1_parameter1">SIM卡变更报警</string>
    <string name="burglars_setup1_parameter2">GPS追踪</string>
    <string name="burglars_setup1_parameter3">远程数据销毁</string>
    <string name="burglars_setup1_parameter4">远程锁屏</string>

    <string name="burglars_setup2_title">2.手机SIM卡绑定</string>
    <string name="burglars_setup2_subtitle">绑定手机SIM卡：</string>
    <string name="burglars_setup2_content">下次重启手机如果发现SIM卡变化就会发送报警短信</string>
    <string name="burglars_setup2_sim_title">点击绑定SIM卡</string>
    <string name="burglars_setup2_sim_subtitle_yes">SIM卡已经绑定</string>
    <string name="burglars_setup2_sim_subtitle_no">SIM卡未绑定</string>

    <string name="burglars_setup3_title">3.设置安全号码</string>
    <string name="burglars_setup3_subtitle">SIM卡变更后报警短信会发送给安全号码</string>
    <string name="burglars_setup3_btn_contact">选择联系人</string>
    <string name="burglars_setup3_btn_reset_contact">重置联系人</string>
    <string name="burglars_setup3_et_hint_contact">点击下方按钮选择联系人</string>

    <string name="burglars_setup4_title">4.设置完成</string>
    <string name="burglars_setup4_subtitle">SIM卡变更后报警短信会发送给安全号码</string>
    <string name="burglars_setup4_et_hint_contact">输入联系人号码</string>

    <string name="burglars_result_safe_phonenum">安全号码</string>
    <string name="burglars_result_safe_status">手机防盗状态</string>
    <string name="burglars_result_func_brief">功能简介</string>
    <string name="burglars_result_reset_burglars">重新进入设置导航</string>
    <string name="burglars_result_parameter1">SIM卡变更报警(##**ALARM**##)</string>
    <string name="burglars_result_parameter2">GPS追踪(##**LOCATION**##)</string>
    <string name="burglars_result_parameter3">远程数据销毁(##**WIPEDATA**##)</string>
    <string name="burglars_result_parameter4">远程锁屏(##**LOCKSCREEN**##）</string>
    <string name="burglars_result_parameter1_negated">SIM卡变更报警：</string>
    <string name="burglars_result_parameter2_negated">GPS追踪：</string>
    <string name="burglars_result_parameter3_negated">远程数据销毁：已开启</string>
    <string name="burglars_result_parameter4_negated">远程锁屏：已开启</string>
    <string name="burglars_result_hint">点击上面条目开启相应服务</string>
    <string name="burglars_result_service_status">服务运行状态：</string>

    <!--选择联系人界面-->
    <string name="burglars_setup3_contact_list">选择联系人</string>

    <string name="burglars_btn_setup_before">上一步</string>
    <string name="burglars_btn_setup_next">下一步</string>
    <string name="burglars_btn_setup_cancel">取消</string>
    <string name="burglars_btn_setup_complete">完成</string>

    <!--缓存清理-->
    <string name="cache_title">缓存清理</string>

    <!--高级工具-->
    <string name="advance_title">高级工具</string>
    <string name="attribution_lookup">归属地查询</string>
    <string name="attribution_lookup_hint">请输入电话号码</string>
    <string name="attribution_lookup_resule">归属地显示结果：</string>
    <string name="attribution_lookup_btn_choise">选择</string>
    <string name="attribution_lookup_btn_query">查询</string>

    <string name="backup_sms">短信备份</string>
    <string name="phonenum_lookup">常用号码查询</string>
    <string name="app_lock">程序锁</string>
    <string name="cpu_info">CPU信息</string>
    <string name="net_speed">网络测速</string>

    <!--设置中心-->
    <string name="setting_title">设置中心</string>
    <string name="common_item_title">条目标题</string>
    <string name="common_item_content">这个条目将会起一些作用</string>
    <!--设置中心：自动更新-->
    <string name="update_title">自动更新</string>
    <string name="update_subtitle_positive">自动更新已经开启</string>
    <string name="update_subtitle_negative">自动更新已经关闭</string>
    <!--设置中心：来电归属地-->
    <string name="phone_address_title">来电归属地</string>
    <string name="phone_address_location">选中提示框拖动到任意位置</string>

    <string name="aboutapp_title">关于软件</string>
    <string name="aboutapp_subtitle">点击查看软件详细信息</string>

    <!--关于软件-->
    <string name="app_github_address">https://github.com/thiscoders/Android_Jarvis</string>
    <string name="app_update_btn">检查更新</string>
    <string name="app_test_new_btn">检测服务</string>

    <!--共享参数文件-->
    <string name="SharedPreferences_File1">commonfile</string>

    <string name="sample_device_admin">Jarvis Device Admin</string>
    <string name="sample_device_admin_description">一键锁屏,销毁数据</string>
</resources>
