<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/JTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDialog"
        android:text="@string/dialog_initialize_pwd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/et_first_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_first_pwd_hint"
        android:inputType="textPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/et_second_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_second_pwd_hint"
        android:inputType="textPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pwd_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_negative_button" />

        <Button
            android:id="@+id/btn_pwd_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_check_button" />

        <Button
            android:id="@+id/btn_pwd_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_positive_button" />

    </LinearLayout>
</LinearLayout>