<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--
        <TextView
            style="@style/JTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_title" />-->

        <TextView
            style="@style/JBurglarsSetupSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_subtitle" />

        <!--functions-->
        <TextView
            style="@style/JBurglarsSetupFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_parameter1" />

        <TextView
            style="@style/JBurglarsSetupFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_parameter2" />

        <TextView
            style="@style/JBurglarsSetupFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_parameter3" />

        <TextView
            style="@style/JBurglarsSetupFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup1_parameter4" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/burglars_setup1_image" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_setup1_page_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_online" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

        </LinearLayout>

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ll_setup1_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="returnBeforePage"
            android:text="@string/burglars_btn_setup_cancel" />

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_setup1_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:onClick="startNextPage"
            android:text="@string/burglars_btn_setup_next" />
    </RelativeLayout>

</RelativeLayout>