<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--标题栏-->
        <TextView
            style="@style/JTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup3_title" />

        <!--副标题-->
        <TextView
            style="@style/JBurglarsSetupSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup3_subtitle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/burglars_setup3_et_hint_contact" />

        <Button
            android:id="@+id/btn_select_contact"
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="selectContacts"
            android:text="@string/burglars_setup3_btn_contact" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_reset_contact"
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="resetContacts"
            android:text="@string/burglars_setup3_btn_reset_contact" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/burglars_setup3_image" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_setup3_page_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_online" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

        </LinearLayout>

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ll_setup3_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="returnBeforePage"
            android:text="@string/burglars_btn_setup_before" />

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_setup3_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:onClick="startNextPage"
            android:text="@string/burglars_btn_setup_next" />
    </RelativeLayout>
</RelativeLayout>