<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--   <TextView
           style="@style/JTitleStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/attribution_lookup" />-->

    <EditText
        android:id="@+id/et_attr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/attribution_lookup_hint"
        android:inputType="text"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_contact_attrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_attr_lookup"
            style="@style/JarvisButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="5dp"
            android:onClick="queryPhone"
            android:text="@string/attribution_lookup_btn_query" />

        <Button
            style="@style/JarvisButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_attr_lookup"
            android:onClick="choiceContact"
            android:text="@string/attribution_lookup_btn_choise" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBurglarsResultFuncBrief"
        android:gravity="left"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/attribution_lookup_resule"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_attr_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20sp" />
    </ScrollView>
</LinearLayout>