<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/JTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup2_title" />

        <TextView
            style="@style/JBurglarsSetupSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup2_subtitle" />

        <TextView
            style="@style/JBurglarsSetupSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burglars_setup2_content" />

        <ye.droid.jarvis.cvs.SettingItem
            android:id="@+id/st_bind_sim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bindSIM"
            app:subtitle_negative_content="SIM卡未绑定"
            app:subtitle_positive_content="SIM卡已经绑定"
            app:title_content="点击绑定SIM卡" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/burglars_setup2_image" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_setup2_page_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_online" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible" />

        </LinearLayout>

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ll_setup2_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="returnBeforePage"
            android:text="@string/burglars_btn_setup_before" />

        <Button
            style="@style/JBurglarsSetupButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_setup2_page_flag"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:onClick="startNextPage"
            android:text="@string/burglars_btn_setup_next" />
    </RelativeLayout>
</RelativeLayout>